public enum HelpCategory {
    LAUNDRY,       // Tøjvask
    ELECTRONICS,   // Køleskab/fryser, strøm osv.
    MOVE_IN,       // Inden indflytning
    STARTERPACK,   // Hvad man skal have derhjemme
    CLEANING       // Rengøringsrutine
}
