@startuml

class User {
  id
  username
  email
}

class Budget {
  amount
  balanceAfter
  type
  timestamp
}

class BudgetPlan {
  periodType
  income
  savings
  totalFixed
  days
  dailyBudget
}

class FixedExpense {
  name
  amount
}

class Task {
  taskId
  task
}

class HelpTopic {
  title
  content
}

class HelpCategory {
  name
}

' =====================
' Services
' =====================
class HelpService

HelpService --> HelpTopic
HelpService --> HelpCategory
HelpPageController --> HelpService

' =====================
' Relationships
' =====================
User "1" --> "many" Budget
User "1" --> "many" Task
User "1" --> "many" BudgetPlan

BudgetPlan "1" --> "many" FixedExpense
HelpCategory "1" --> "many" HelpTopic

BudgetController --> DbManager
TodoController --> DbManager
LoginController --> DbManager
RegisterController --> DbManager

@enduml